--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,7 +42,7 @@
                       alt=""
                     />
                     <h6 class="h3">Login</h6>
-                    <p class="text-muted mb-0">LearnStram - Let's Learn</p>
+                    <p class="text-muted mb-0">LearnStream - Let's Learn</p>
                   </div>
                   <span class="clearfix"></span>
 
